# KB2

./: .gitignore  Cargo.toml  LICENSE  README.md  dev-requirements.txt  lambda-requirements.txt  main.py  requirements.txt
.github/workflows/: api-deploy.yml  serverless-package.yml  ui-deploy.yml
api/: Cargo.toml  todo.sql
api/migrations/: 20260119010332_init.down.sql  20260119010332_init.up.sql  20260119050545_init.down.sql  20260119050545_init.up.sql  20260126004140_audit.down.sql  20260126004140_audit.up.sql  20260702120000_audit_sqs_dedupe_key.down.sql  20260702120000_audit_sqs_dedupe_key.up.sql  20260702120001_audit_sqs_dedupe_key_unique_index.down.sql  20260702120001_audit_sqs_dedupe_key_unique_index.up.sql  20260712120000_guild_user_links.down.sql  20260712120000_guild_user_links.up.sql  20260712120001_verify_jobs.down.sql  20260712120001_verify_jobs.up.sql  todo.sql
api/openapi/: openapi.yaml
api/src/: audit.rs  auth.rs  discord.rs  dsql.rs  dynamo.rs  guilds.rs  main.rs  middleware.rs  users.rs  utils.rs
api/src/guilds/: mod.rs  models.rs  tasks.rs  utils.rs  verify.rs
api/src/guilds/verify/: controllers.rs  mod.rs  models.rs
api/src/guilds/votes/: controllers.rs  interactions.rs  mod.rs  models.rs  utils.rs
api/src/interactions/: mod.rs
api/src/meta/: guilds.rs  mod.rs  users.rs
api/src/users/: email.rs  link_guilds.rs  links.rs  mod.rs  models.rs  user.rs  utils.rs
api/src/verify/: controller.rs
common/: Cargo.toml
common/src/: audit.rs  dsql.rs  lib.rs  verify.rs
consumer/: Cargo.toml
consumer/src/: lib.rs  main.rs
consumer/src/audit/: consumer.rs  mod.rs  models.rs
consumer/src/verify/: consumer.rs  discord.rs  mod.rs
consumer/tests/: integration.rs  perf.rs
consumer/tests/harness/: mod.rs
dislord/: __init__.py  api.py  client.py  defer.py  group.py  log.py  server.py  types.py
dislord/aws/: lambda_runtime.py
dislord/defer_ws/: lambda_ext.py  local.py
dislord/discord/: api.py  base.py  permissions.py  reference.py  team.py  type.py
dislord/discord/interactions/application_commands/: enums.py  models.py
dislord/discord/interactions/components/: enums.py  models.py
dislord/discord/interactions/receiving_and_responding/: interaction.py  interaction_callback.py  interaction_data.py  interaction_response.py  message_interaction.py
dislord/discord/resources/application/: enums.py  flags.py  models.py
dislord/lambda/entrypoint/: dislord_entry.py
dislord/lambda/extensions/: dislord_ext  dislord_ext.py
dislord/model/: api.py  application.py  base.py  channel.py  commands.py  guild.py  user.py
dislord/models/: base.py  channel.py  command.py  guild.py  interaction.py  type.py
docs/: CLAUDE.md  verify_recon_architecture.md  verify_recon_low_level.md
docs/high-level-architecture/: verify-role-reconciliation.md
docs/low-level-architecture/: verify-role-reconciliation.md
extensions/: dislord_ws  kb2_defer  kb2_defer.py
gateway/: Cargo.toml
gateway/src/: main.rs
infra/: main.tf  variables.tf
infra/modules/api/waf/: main.tf  (+1 more)
kb2/: __init__.py  api.py  api.py~  client.py  commands.py  defer.py  dtos.py  env.py  errors.py  jwt.py  log.py  main.py  middleware.py  security.py  server.py  temp.py
kb2-entrypoint/: env.py  func.py  log.py
kb2/ext/: __init__.py
kb2/ext/koala/: __init__.py  api.py  commands.py  core.py  dtos.py  mappers.py  models.py
kb2/ext/verify/: commands.py  models.py
kb2/ext/verifyme/: api.py  commands.py  core.py  core.py~  dtos.py  env.py  errors.py  mappers.py  models.py  validators.py
kb2_entrypoint/: __init__.py  func.py  requirements.txt
scripts/: verify-recon-tests.sh
static/: README.md  bun.lockb  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
static/src/: App.vue  main.js  style.css
static/src/assets/: main.css
static/src/components/: ConfirmModal.vue  ThemeToggle.vue
static/src/helpers/: auth.js  redirect.js  verify.js
static/src/pages/: AppView.vue  NotFoundView.vue
static/src/router/: RouterView.vue
static/src/stores/: auth.js
ui/: index.html  package-lock.json  package.json  vite.config.js
ui/public/.well-known/: microsoft-identity-association.json
ui/src/: App.vue  style.css  tailwind.config.js
ui/src/components/: ConfirmModal.test.js  ConfirmModal.vue  MainWithFooter.vue  ThemeToggle.vue
ui/src/helpers/: auth.js  discord.js  discordapi.js  kbguild.js  meta.js  redirect.js  user.js  user.test.js  verify.js  vote.js
ui/src/pages/: HomeView.test.js  HomeView.vue  LoginView.vue  NotFoundView.vue
ui/src/router/: RouterView.vue
ui/src/stores/: discord.js  guild.js  guild.test.js  health.js  meta.js  user.js
ui/src/testUtils/: templateDom.js
(+161 files in other folders)
