[package]
name = "api"
version = "2.0.0-alpha.1"
edition = "2024"

[dependencies]
lambda_http = { version = "0.16.0" }
tokio = { version = "1", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors", "auth"] }
axum = "0.8.4"
http = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tower = "0.5.2"
twilight = "0.16.0"
twilight-http = "0.16.0"
twilight-model = "0.16.0"
aws-sdk-dynamodb = "1.89.0"
aws-config = "1.8.5"
reqwest = { version = "0.12.23", features = ["json", "native-tls-vendored"] }
chrono = "0.4.41"
ed25519-dalek = "2.2.0"
once_cell = "1.21.3"
hex = "0.4.3"
http-body-util = "0.1.3"