[package]
name = "api"
version = "2.0.1"
edition = "2024"

[dependencies]
lambda_http = { version = "0.17.0" }
tokio = { version = "1", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors", "auth"] }
axum = "0.8.4"
http = "1.3.1"
serde = { version = "1.0.223", features = ["derive"] }
serde_json = "1.0.145"
tower = "0.5.2"
twilight = "0.16.0"
twilight-http = "0.16.0"
twilight-model = "0.16.0"
aws-sdk-sesv2 = "1.98.0"
aws-sdk-scheduler = "1.84.0"
aws-config = "1.8.6"
reqwest = { version = "0.12.23", features = ["json", "native-tls-vendored"] }
chrono = {  version = "0.4.42", features = ["serde"] }
ed25519-dalek = "2.2.0"
once_cell = "1.21.3"
hex = "0.4.3"
http-body-util = "0.1.3"
regex = "1.11.2"
cached = { version = "0.56.0", features = ["async"] }
hmac = "0.12.1"
sha2 = "0.10.9"
jwt = "0.16.0"
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-rustls" , "postgres", "uuid", "bigdecimal"] }
aws-sdk-dsql = "1.1"
anyhow = { version = "1", features = ["backtrace"] }
bigdecimal = "0.4" # Use the latest version