[package]
name = "api"
version.workspace = true
edition.workspace = true

[dependencies]
lambda_http = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
tower-http = { workspace = true, features = ["cors", "auth"] }
axum = { workspace = true }
http = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
twilight-http = { workspace = true }
twilight-model = { workspace = true }
aws-sdk-sesv2 = { workspace = true }
aws-sdk-scheduler = { workspace = true }
aws-config = { workspace = true }
reqwest = { workspace = true, features = ["json", "native-tls-vendored"] }
chrono = { workspace = true, features = ["serde"] }
ed25519-dalek = { workspace = true }
once_cell = { workspace = true }
hex = { workspace = true }
http-body-util = { workspace = true }
regex = { workspace = true }
cached = { workspace = true, features = ["async"] }
hmac = { workspace = true }
sha2 = { workspace = true }
jwt = { workspace = true }
sqlx = { workspace = true, features = [ "runtime-tokio", "tls-rustls" , "postgres", "uuid", "bigdecimal"] }
bigdecimal = { workspace = true }
common = { path = "../common", version = "2.0.0"}
aws-sdk-sqs = { workspace = true }