[package]
name = "common"
version.workspace = true
edition.workspace = true

[dependencies]
twilight-model = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
aws-config = { workspace = true }
aws-sdk-dsql = { workspace = true }
sqlx = { workspace = true, features = [ "runtime-tokio", "tls-rustls" , "postgres", "uuid", "bigdecimal"] }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }