[package]
name = "consumer"
version.workspace = true
edition.workspace = true

[dependencies]
aws_lambda_events = { workspace = true }
lambda_runtime = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
twilight-model = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true, features = [ "runtime-tokio", "tls-rustls" , "postgres", "uuid", "bigdecimal"] }
aws-sdk-dsql = { workspace = true }
serde_json = { workspace = true }
common = { path = "../common", version = "2.0.0" }
aws-config = { workspace = true }
anyhow = { workspace = true, features = ["backtrace"] }