[package]
name = "gateway"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true, features = ["rt-multi-thread"] }
twilight-gateway = { workspace = true }
twilight-model = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true, features = ["json"] }